# ancient-all-in-one

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
ancient_all_in_one/: __init__.py  __main__.py  app.py  config.py  models.py
ancient_all_in_one/data/: __init__.py  default_state.py
ancient_all_in_one/migrations/: __init__.py
ancient_all_in_one/modules/: __init__.py  registry.py
ancient_all_in_one/services/: backups.py  diagnostics.py  settings.py  storage.py  telemetry.py  updates.py  validation.py
ancient_all_in_one/ui/: main_window.py  navigation.py  pages.py
docs/: development.md  github_safety.md  update_flow.md
maplestory_tracker/: __init__.py  __main__.py  app.py  config.py
maplestory_tracker/data/: default_state.py
maplestory_tracker/services/: storage.py  updates.py
maplestory_tracker/ui/: main_window.py  navigation.py  pages.py
scripts/: check.ps1  release.ps1
tests/: test_backups.py  test_config.py  test_diagnostics.py  test_migrations.py  test_modules.py  test_settings.py  test_storage.py  test_ui_smoke.py  test_updates.py  test_validation.py
