[project]
name = "ancient-all-in-one"
version = "0.1.0"
description = "A modular all-in-one MapleStory GMS progression tracker."
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
