[project]
name = "ancient-all-in-one"
version = "0.1.0"
description = "A modular all-in-one MapleStory GMS progression tracker."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

